<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/commenttextstart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="18dp"
        android:ems="10"
        android:hint="@string/type_some_comment_text"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/commentstartbtn"
        android:layout_width="80dp"
        android:layout_height="35dp"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/commenttextstart"
        android:layout_marginBottom="30dp"
        android:layout_marginTop="85dp"
        android:background="@drawable/btn_bg"
        android:text="@string/comment_text_dialog"
        android:textAllCaps="false"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/commentcancelbtn"
        android:layout_width="80dp"
        android:layout_height="35dp"
        android:layout_alignEnd="@+id/commenttextstart"
        android:layout_alignTop="@+id/commentstartbtn"
        android:layout_marginBottom="30dp"
        android:background="@drawable/btn_bg"
        android:text="@string/cancel_dialog_text"
        android:textAllCaps="false"
        android:textColor="@android:color/white" />
</RelativeLayout>