<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.blogspot.techtibet.tempapp.LoginActivity">
    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:id="@+id/logintoolbar"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.Dark"/>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/emailinputlayout"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="138dp"
        android:textColorHint="@android:color/darker_gray">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/loginemail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/login_email"
            android:inputType="textEmailAddress" />

    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="209dp"
        android:textColorHint="@android:color/darker_gray">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/loginpass"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/lgin_password"
            android:inputType="textPassword" />

    </android.support.design.widget.TextInputLayout>


    <Button
        android:id="@+id/loginlog"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/emailinputlayout"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="228dp"
        android:background="@drawable/btn_bg"
        android:text="@string/login_register"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/resendbtn"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/loginlog"
        android:layout_marginBottom="162dp"
        android:background="@drawable/btn_bg"
        android:text="@string/login_resend_email_link"
        android:textColor="@android:color/white"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/emailinputlayout"
        android:layout_marginTop="101dp"
        android:text="@string/log_in_to_your_account"
        android:textSize="20sp" />


</RelativeLayout>
