<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context="com.blogspot.techtibet.tempapp.PhoneActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/phone_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.Dark" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="129dp"
        android:orientation="horizontal"
        android:weightSum="10">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            app:srcCompat="@mipmap/ic_phone"
            android:contentDescription="@string/activty_verify_phone"/>

        <EditText
            android:id="@+id/phoneno"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="8"
            android:backgroundTint="@color/colorAccent"
            android:ems="10"
            android:hint="@string/enter_phone_no"
            android:inputType="phone"
            android:textColor="@android:color/white"
            android:textColorHint="@color/hintColor" />

        <ProgressBar
            android:id="@+id/progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:visibility="invisible" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/verificationlayot"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="194dp"
        android:orientation="horizontal"
        android:visibility="invisible"
        android:weightSum="10">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            app:srcCompat="@mipmap/ic_verify"
            android:contentDescription="@string/verify_code_image"/>

        <EditText
            android:id="@+id/verificationcode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="9"
            android:backgroundTint="@color/colorAccent"
            android:hint="@string/phone_type_verification_code"
            android:inputType="phone"
            android:textColor="@android:color/white"
            android:textColorHint="@color/hintColor" />

        <ProgressBar
            android:id="@+id/progress_verify"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:visibility="invisible" />

    </LinearLayout>

    <Button
        android:id="@+id/sendbtn"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/linearLayout"
        android:layout_centerVertical="true"
        android:layout_weight="9"
        android:background="@drawable/btn_bg"
        android:text="@string/phone_send_code"
        android:textAllCaps="false"
        android:textColor="@android:color/white" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/linearLayout"
        android:layout_marginTop="89dp"
        android:text="@string/login_or_register_with_phone"
        android:textColor="@android:color/white"
        android:textSize="20sp"/>

</RelativeLayout>
