<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="1dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="3dp">

            <TextView
                android:id="@+id/comment_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="16dp"
                android:text="@string/username_text_here"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/comment_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentTop="true"
                android:layout_marginEnd="16dp"
                android:text="@string/_12_12_2018_date_text" />

            <TextView
                android:id="@+id/comment_text"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignStart="@+id/comment_name"
                android:layout_marginTop="20dp"
                android:text="@string/this_is_the_best_video_comment_text" />
        </RelativeLayout>
    </android.support.v7.widget.CardView>
</RelativeLayout>