<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:background="@android:color/darker_gray">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="3dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:paddingBottom="3dp">

            <ImageView
                android:id="@+id/video_img"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:background="@color/colorPrimary"
                android:scaleType="fitXY"
                android:src="@drawable/vinelogo"
                android:contentDescription="@string/video_thumbnail_image"/>

            <TextView
                android:id="@+id/video_name"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignTop="@+id/video_date"
                android:layout_marginStart="5dp"
                android:text="@string/new_tibetan_song_2018_title"
                android:textColor="@android:color/white" />

            <View
                android:id="@+id/videodividerleft"
                android:layout_width="100dp"
                android:layout_height="1dp"
                android:layout_below="@+id/video_name"
                android:layout_marginTop="3dp"
                android:layout_marginLeft="5dp"
                android:background="@android:color/white" />

            <View
                android:id="@+id/videodividerright"
                android:layout_width="100dp"
                android:layout_height="1dp"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="3dp"
                android:layout_below="@+id/video_name"
                android:background="@android:color/white"
                android:layout_marginRight="5dp"/>

            <TextView
                android:id="@+id/video_uploader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/videodividerleft"
                android:layout_marginStart="5dp"
                android:layout_marginTop="2dp"
                android:text="@string/uploader_name_activity"
                android:textColor="@android:color/white" />

            <TextView
                android:id="@+id/video_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignRight="@+id/video_img"
                android:layout_below="@id/video_img"
                android:layout_marginEnd="5dp"
                android:layout_marginTop="5dp"
                android:text="@string/date_date_activity"
                android:textColor="@android:color/white" />

            <TextView
                android:id="@+id/view_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_below="@+id/videodividerright"
                android:layout_marginRight="5dp"
                android:layout_marginTop="2dp"
                android:text="@string/view_count_number_text"

                android:textColor="@android:color/white" />
        </RelativeLayout>
    </android.support.v7.widget.CardView>
</RelativeLayout>